--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -3,6 +3,8 @@
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
+server.port= 8090
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/bd-dscatalog
 spring.datasource.username=postgres
 spring.datasource.password=root
