--- a/front-web/package.json
+++ b/front-web/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.20",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-content-loader": "^6.0.1",
