--- a/front-web/package.json
+++ b/front-web/package.json
@@ -11,16 +11,25 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-paginate": "^6.2.1",
+    "@types/react-select": "^4.0.13",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "draft-js": "^0.11.7",
+    "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-content-loader": "^6.0.1",
+    "react-currency-input-field": "^3.3.0",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-hook-form": "^6.15.4",
+    "react-paginate": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.2.1",
     "react-toastify": "^7.0.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -50,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-draft-wysiwyg": "^1.13.1",
     "@types/react-router-dom": "^5.1.7"
   }
 }
