Add env vars front-web

--- a/front-web/package.json
+++ b/front-web/package.json
@@ -19,6 +19,7 @@
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
+    "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-content-loader": "^6.0.1",
     "react-currency-input-field": "^3.3.0",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.6",
     "@types/react-draft-wysiwyg": "^1.13.1",
     "@types/react-router-dom": "^5.1.7"
   }
