--- a/front-web/package.json
+++ b/front-web/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/jest": "^26.0.20",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.19.15",
@@ -16,6 +17,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
